force-app/main/default/objects/Repository__c/fields/Forks_Count__c.field-meta.xml
<CustomField>
    <fullName>Forks_Count__c</fullName>
    <label>Forks Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>