force-app/main/default/objects/Repository__c/fields/GitHub_Id__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Id__c</fullName>
    <externalId>true</externalId>
    <label>GitHub Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>