force-app/main/default/objects/Repository__c/fields/Owner_Login__c.field-meta.xml
<CustomField>
    <fullName>Owner_Login__c</fullName>
    <label>Owner Login</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>