force-app/main/default/objects/Repository__c/fields/Stargazers_Count__c.field-meta.xml
<CustomField>
    <fullName>Stargazers_Count__c</fullName>
    <label>Stargazers Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>