force-app/main/default/objects/Repository__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>